# img-sort

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: tauri-build.yml
models/clip-vit-b32-onnx/: README.md  config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
models/clip-vit-b32-onnx/onnx/: model_q4f16.onnx
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: classifier.rs  commands.rs  config.rs  db.rs  decode.rs  events.rs  export.rs  mod.rs  model.rs  ollama.rs  pipeline.rs  scan.rs
src-tauri/src/core/clip/: engine.rs  math.rs  mod.rs  preprocess.rs  prompts.rs
src/components/buttons/: PrimaryButton.tsx
src/components/charts/: RadarChart.tsx
src/components/dialog/: Modal.tsx
src/components/forms/: TextField.tsx
src/components/layout/: AppShell.tsx  TitleBar.tsx
src/components/nav/: Sidebar.tsx
src/components/status/: Badge.tsx  ProgressBar.tsx
src/components/table/: DataTable.tsx
src/components/toast/: Toaster.tsx  toastBus.ts
src/features/analysis/: store.tsx
src/lib/: categories.ts  permissions.ts  pickDirectory.ts  platform.ts  tauriRuntime.ts
src/lib/api/: index.ts  types.ts
src/pages/: MainPage.tsx  ResultsPage.tsx  SettingsPage.tsx
src/pages/settings/: ClipSettings.tsx  OllamaSettings.tsx  SettingsHome.tsx
