[package]
name = "img-sort"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "img_sort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
parking_lot = "0.12"
once_cell = "1.19"
tempfile = "3"
ort = { version = "2.0.0-rc.10", features = ["coreml", "cuda", "rocm", "directml", "openvino"] }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
ndarray = "0.16.1"
